<?xml version="1.0"?>
<package format="2">
  <name>spinnaker_sdk_camera_driver</name>
  <version>1.1.1</version>
  <description>Point Grey (FLIR) Spinnaker based camera driver (Blackfly S etc.)</description>

  <maintainer email="ywang1040@ucr.edu">Vikrant Shah</maintainer>

  <author>Yipeng Wang</author>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>libunwind-dev</build_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

  
</package>
